chore(config)：配置文件修改